Configuring Drupal styles

--- a/styleguide/item-components-drupal-drupal7.html
+++ b/styleguide/item-components-drupal-drupal7.html
@@ -46,24 +46,24 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-global" class="kss-section kss-section--depth-1 is-fullscreen">
+    <div id="kssref-components-drupal-drupal7" class="kss-section kss-section--depth-3 is-fullscreen">
 
       <div class="kss-style">
-        <h1 class="kss-title kss-title--level-1">
-          <a class="kss-title__permalink" href="#kssref-global">
+        <h3 class="kss-title kss-title--level-3">
+          <a class="kss-title__permalink" href="#kssref-components-drupal-drupal7">
             <span class="kss-title__ref">
-              3
+              1.1.1
               <span class="kss-title__permalink-hash">
-                  #global
+                  #components.drupal.drupal7
               </span>
             </span>
-            Global Style Sheet
+            Drupal 7
           </a>
-        </h1>
+        </h3>
 
 
           <div class="kss-description">
-            <p>The main style sheet.</p>
+            <p>Contains default Drupal 7 styles.</p>
 
           </div>
 
@@ -71,7 +71,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>global.scss</code>, line 1
+          Source: <code>components/drupal/_drupal7.scss</code>, line 1
         </div>
 
     </div>
