--- a/styleguide/item-components-drupal-modules-styleguide.html
+++ b/styleguide/item-components-drupal-modules-styleguide.html
@@ -46,24 +46,24 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-global" class="kss-section kss-section--depth-1 is-fullscreen">
+    <div id="kssref-components-drupal-modules-styleguide" class="kss-section kss-section--depth-4 is-fullscreen">
 
       <div class="kss-style">
-        <h1 class="kss-title kss-title--level-1">
-          <a class="kss-title__permalink" href="#kssref-global">
+        <h4 class="kss-title kss-title--level-4">
+          <a class="kss-title__permalink" href="#kssref-components-drupal-modules-styleguide">
             <span class="kss-title__ref">
-              3
+              1.1.2.1
               <span class="kss-title__permalink-hash">
-                  #global
+                  #components.drupal.modules.styleguide
               </span>
             </span>
-            Global Style Sheet
+            Styleguide
           </a>
-        </h1>
+        </h4>
 
 
           <div class="kss-description">
-            <p>The main style sheet.</p>
+            <p>Contains default Styleguide module styles.</p>
 
           </div>
 
@@ -71,7 +71,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>global.scss</code>, line 1
+          Source: <code>components/drupal/modules/_styleguide.scss</code>, line 1
         </div>
 
     </div>
