--- a/styleguide/item-components.html
+++ b/styleguide/item-components.html
@@ -30,6 +30,26 @@
         <a class="kss-nav__menu-link" href="section-components.html">
           <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
         </a>
+            <ul class="kss-nav__menu-child">
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-drupal">
+                  <span class="kss-nav__ref ">1.1</span
+                  ><span class="kss-nav__name">Drupal</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-drupal-drupal7">
+                  <span class="kss-nav__ref kss-nav__ref-child">1.1.1</span
+                  ><span class="kss-nav__name">Drupal 7</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-drupal-modules">
+                  <span class="kss-nav__ref kss-nav__ref-child">1.1.2</span
+                  ><span class="kss-nav__name">Drupal Modules</span>
+                </a>
+              </li>
+            </ul>
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-framework.html">
@@ -46,32 +66,28 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-global" class="kss-section kss-section--depth-1 is-fullscreen">
+    <div id="kssref-components" class="kss-section kss-section--depth-1 is-fullscreen">
 
       <div class="kss-style">
         <h1 class="kss-title kss-title--level-1">
-          <a class="kss-title__permalink" href="#kssref-global">
+          <a class="kss-title__permalink" href="#kssref-components">
             <span class="kss-title__ref">
-              3
+              1
               <span class="kss-title__permalink-hash">
-                  #global
+                  #components
               </span>
             </span>
-            Global Style Sheet
+            Components
           </a>
         </h1>
 
 
-          <div class="kss-description">
-            <p>The main style sheet.</p>
-
-          </div>
 
       </div>
 
 
         <div class="kss-source kss-style">
-          Source: <code>global.scss</code>, line 1
+          Source: <code>global.scss</code>, line 19
         </div>
 
     </div>
