--- a/styleguide/item-framework-foundation-settings.html
+++ b/styleguide/item-framework-foundation-settings.html
@@ -27,13 +27,18 @@
         </a>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-components.html">
+          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-framework.html">
-          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Framework</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Framework</span>
         </a>
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-global.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Global Style Sheet</span>
+          <span class="kss-nav__ref">3</span><span class="kss-nav__name">Global Style Sheet</span>
         </a>
       </li>
     </ul>
@@ -47,7 +52,7 @@
         <h3 class="kss-title kss-title--level-3">
           <a class="kss-title__permalink" href="#kssref-framework-foundation-settings">
             <span class="kss-title__ref">
-              1.1.1
+              2.1.1
               <span class="kss-title__permalink-hash">
                   #framework.foundation.settings
               </span>
