--- a/styleguide/section-components.html
+++ b/styleguide/section-components.html
@@ -30,25 +30,31 @@
         <a class="kss-nav__menu-link" href="section-components.html">
           <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
         </a>
+            <ul class="kss-nav__menu-child">
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-drupal">
+                  <span class="kss-nav__ref ">1.1</span
+                  ><span class="kss-nav__name">Drupal</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-drupal-drupal7">
+                  <span class="kss-nav__ref kss-nav__ref-child">1.1.1</span
+                  ><span class="kss-nav__name">Drupal 7</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-drupal-modules">
+                  <span class="kss-nav__ref kss-nav__ref-child">1.1.2</span
+                  ><span class="kss-nav__name">Drupal Modules</span>
+                </a>
+              </li>
+            </ul>
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-framework.html">
           <span class="kss-nav__ref">2</span><span class="kss-nav__name">Framework</span>
         </a>
-            <ul class="kss-nav__menu-child">
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-framework.html#kssref-framework-foundation">
-                  <span class="kss-nav__ref ">2.1</span
-                  ><span class="kss-nav__name">Foundation</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-framework.html#kssref-framework-foundation-settings">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.1.1</span
-                  ><span class="kss-nav__name">Settings</span>
-                </a>
-              </li>
-            </ul>
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-global.html">
@@ -60,91 +66,74 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-framework" class="kss-section kss-section--depth-1 ">
+    <div id="kssref-components" class="kss-section kss-section--depth-1 ">
 
       <div class="kss-style">
         <h1 class="kss-title kss-title--level-1">
-          <a class="kss-title__permalink" href="#kssref-framework">
+          <a class="kss-title__permalink" href="#kssref-components">
             <span class="kss-title__ref">
-              2
+              1
               <span class="kss-title__permalink-hash">
-                  #framework
+                  #components
               </span>
             </span>
-            Framework
+            Components
           </a>
         </h1>
 
 
-          <div class="kss-description">
-            <p>Frontend Build comes with the
-<a href="http://foundation.zurb.com/" target="_blank">Foundation</a>
-framework installed by default. If you prefer, you can comment it out,
-integrate another like
-<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> or build
-your own.</p>
-
-          </div>
 
       </div>
 
 
         <div class="kss-source kss-style">
-          Source: <code>global.scss</code>, line 7
+          Source: <code>global.scss</code>, line 19
         </div>
 
     </div>
-    <section id="kssref-framework-foundation" class="kss-section kss-section--depth-2 ">
+    <section id="kssref-components-drupal" class="kss-section kss-section--depth-2 ">
 
       <div class="kss-style">
         <h2 class="kss-title kss-title--level-2">
-          <a class="kss-title__permalink" href="#kssref-framework-foundation">
+          <a class="kss-title__permalink" href="#kssref-components-drupal">
             <span class="kss-title__ref">
-              2.1
+              1.1
               <span class="kss-title__permalink-hash">
-                  #framework.foundation
+                  #components.drupal
               </span>
             </span>
-            Foundation
+            Drupal
           </a>
         </h2>
 
 
-          <div class="kss-description">
-            <p>A Framework for any device, medium, and accessibility. Foundation is a family
-of responsive front-end frameworks that make it easy to design beautiful
-responsive websites, apps and emails that look amazing on any device.
-Foundation is semantic, readable, flexible, and completely customizable.</p>
-
-          </div>
 
       </div>
 
 
         <div class="kss-source kss-style">
-          Source: <code>framework/foundation/_framework.scss</code>, line 1
+          Source: <code>global.scss</code>, line 23
         </div>
 
     </section>
-    <section id="kssref-framework-foundation-settings" class="kss-section kss-section--depth-3 ">
+    <section id="kssref-components-drupal-drupal7" class="kss-section kss-section--depth-3 ">
 
       <div class="kss-style">
         <h3 class="kss-title kss-title--level-3">
-          <a class="kss-title__permalink" href="#kssref-framework-foundation-settings">
+          <a class="kss-title__permalink" href="#kssref-components-drupal-drupal7">
             <span class="kss-title__ref">
-              2.1.1
+              1.1.1
               <span class="kss-title__permalink-hash">
-                  #framework.foundation.settings
+                  #components.drupal.drupal7
               </span>
             </span>
-            Settings
+            Drupal 7
           </a>
         </h3>
 
 
           <div class="kss-description">
-            <p>The settings file for Foundation, which will allow you to modify the default
-styles of Foundation.</p>
+            <p>Contains default Drupal 7 styles.</p>
 
           </div>
 
@@ -152,7 +141,61 @@ styles of Foundation.</p>
 
 
         <div class="kss-source kss-style">
-          Source: <code>framework/foundation/_settings.scss</code>, line 1
+          Source: <code>components/drupal/_drupal7.scss</code>, line 1
+        </div>
+
+    </section>
+    <section id="kssref-components-drupal-modules" class="kss-section kss-section--depth-3 ">
+
+      <div class="kss-style">
+        <h3 class="kss-title kss-title--level-3">
+          <a class="kss-title__permalink" href="#kssref-components-drupal-modules">
+            <span class="kss-title__ref">
+              1.1.2
+              <span class="kss-title__permalink-hash">
+                  #components.drupal.modules
+              </span>
+            </span>
+            Drupal Modules
+          </a>
+        </h3>
+
+
+
+      </div>
+
+
+        <div class="kss-source kss-style">
+          Source: <code>global.scss</code>, line 28
+        </div>
+
+    </section>
+    <section id="kssref-components-drupal-modules-styleguide" class="kss-section kss-section--depth-4 ">
+
+      <div class="kss-style">
+        <h4 class="kss-title kss-title--level-4">
+          <a class="kss-title__permalink" href="#kssref-components-drupal-modules-styleguide">
+            <span class="kss-title__ref">
+              1.1.2.1
+              <span class="kss-title__permalink-hash">
+                  #components.drupal.modules.styleguide
+              </span>
+            </span>
+            Styleguide
+          </a>
+        </h4>
+
+
+          <div class="kss-description">
+            <p>Contains default Styleguide module styles.</p>
+
+          </div>
+
+      </div>
+
+
+        <div class="kss-source kss-style">
+          Source: <code>components/drupal/modules/_styleguide.scss</code>, line 1
         </div>
 
     </section>
