--- a/styleguide/item-components-drupal-modules.html
+++ b/styleguide/item-components-drupal-modules.html
@@ -46,32 +46,28 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-global" class="kss-section kss-section--depth-1 is-fullscreen">
+    <div id="kssref-components-drupal-modules" class="kss-section kss-section--depth-3 is-fullscreen">
 
       <div class="kss-style">
-        <h1 class="kss-title kss-title--level-1">
-          <a class="kss-title__permalink" href="#kssref-global">
+        <h3 class="kss-title kss-title--level-3">
+          <a class="kss-title__permalink" href="#kssref-components-drupal-modules">
             <span class="kss-title__ref">
-              3
+              1.1.2
               <span class="kss-title__permalink-hash">
-                  #global
+                  #components.drupal.modules
               </span>
             </span>
-            Global Style Sheet
+            Drupal Modules
           </a>
-        </h1>
+        </h3>
 
 
-          <div class="kss-description">
-            <p>The main style sheet.</p>
-
-          </div>
 
       </div>
 
 
         <div class="kss-source kss-style">
-          Source: <code>global.scss</code>, line 1
+          Source: <code>global.scss</code>, line 28
         </div>
 
     </div>
