--- a/styleguide/item-framework.html
+++ b/styleguide/item-framework.html
@@ -27,19 +27,24 @@
         </a>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-components.html">
+          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-framework.html">
-          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Framework</span>
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Framework</span>
         </a>
             <ul class="kss-nav__menu-child">
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-framework.html#kssref-framework-foundation">
-                  <span class="kss-nav__ref ">1.1</span
+                  <span class="kss-nav__ref ">2.1</span
                   ><span class="kss-nav__name">Foundation</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-framework.html#kssref-framework-foundation-settings">
-                  <span class="kss-nav__ref kss-nav__ref-child">1.1.1</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.1.1</span
                   ><span class="kss-nav__name">Settings</span>
                 </a>
               </li>
@@ -47,7 +52,7 @@
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-global.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Global Style Sheet</span>
+          <span class="kss-nav__ref">3</span><span class="kss-nav__name">Global Style Sheet</span>
         </a>
       </li>
     </ul>
@@ -61,7 +66,7 @@
         <h1 class="kss-title kss-title--level-1">
           <a class="kss-title__permalink" href="#kssref-framework">
             <span class="kss-title__ref">
-              1
+              2
               <span class="kss-title__permalink-hash">
                   #framework
               </span>
