--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,24 @@
 
 <title>Frontend Build | Ben Marshall</title>
 
-<meta name="description" content="Frontend Build is a light-weight, no-bloat front-end build framework. It gives developers a jumpstart utilizing Node to automate repetitive tasks and more!">
+<meta name="description" content="Frontend Build is a light-weight, no-bloat front-end build framework. It gives developers a jumpstart utilizing Gulp to automate repetitive tasks and more!">
 <meta name="robots" content="noodp">
 <link rel="canonical" href="https://github.com/bmarshall511/frontend">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Frontend Build by Ben Marshall">
-<meta property="og:description" content="Frontend Build is a light-weight, no-bloat front-end build framework. It's purpose is to give developers a jumpstart utilizing Node to automate repetitive tasks, a variables file to quickly configure base elements and a standards-driven approach to help prevent spaghetti code making new developer ramp-up time much shorter.">
+<meta property="og:description" content="Frontend Build is a light-weight, no-bloat, front-end build framework. It's purpose is to give developers a jumpstart utilizing Gulp to automate repetitive tasks, a BEM CSS methodology for a standards-driven approach, pre-loaded with the Foundation front-end framework (easily add others or even your own!) and integrated with Babel allowing developers to use the next generation JavaScript.">
 <meta property="og:url" content="https://github.com/bmarshall511/frontend">
 <meta property="og:site_name" content="Ben Marshall">
 
 <link rel="stylesheet" href="css/global.css" media="all">
 </head>
 <body style="padding-top: 50px;">
-<div style="max-width: 660px; padding-left: 30px; padding-right: 30px; margin-left: auto; margin-right: auto;">
-  <h1>Frontend <sup>build</sup></h1>
-  <p>Frontend Build is a light-weight, no-bloat front-end build framework. It's purpose is to give developers a jumpstart utilizing Node to automate repetitive tasks, a variables file to quickly configure base elements and a standards-driven approach to help prevent spaghetti code making new developer ramp-up time much shorter.</p>
+<div style="max-width: 650px; padding-left: 30px; padding-right: 30px; margin-left: auto; margin-right: auto;">
+  <h1>Frontend Build</h1>
+  <p>Frontend Build is a light-weight, no-bloat, front-end build framework. It's purpose is to give developers a jumpstart utilizing <a href="https://gulpjs.com/" target="_blank">Gulp</a> to automate repetitive tasks, a <a href="http://getbem.com/" target="_blank">BEM CSS methodology for a standards-driven approach</a>, pre-loaded with the <a href="http://foundation.zurb.com/" target="_blank">Foundation</a> front-end framework (easily add others or even your own!) and integrated with <a href="https://babeljs.io/" target="_blank">Babel</a> allowing developers to use the next generation JavaScript.</p>
+  <blockquote>Say "No!" to spaghetti code and "Yes!" to shorter ramp-up times.</blockquote>
   <p>Jump start your development process in three simple steps:</p>
   <p><pre>$ bundle install
 $ npm install
@@ -35,6 +36,9 @@ $ npm start</pre></p>
     <li><a href="https://github.com/bmarshall511/frontend" target="_blank">Fork</a>
   </ul>
 </div>
+<script src="js/jquery.min.js"></script>
+<script src="js/what-input.min.js"></script>
+<script src="js/foundation.min.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
