--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 <body style="padding-top: 50px;">
 <div style="max-width: 650px; padding-left: 30px; padding-right: 30px; margin-left: auto; margin-right: auto;">
   <h1>Frontend Build</h1>
-  <p>Frontend Build is a light-weight, no-bloat, front-end build framework. It's purpose is to give developers a jumpstart utilizing <a href="https://gulpjs.com/" target="_blank">Gulp</a> to automate repetitive tasks, a <a href="http://getbem.com/" target="_blank">BEM CSS methodology for a standards-driven approach</a>, pre-loaded with the <a href="http://foundation.zurb.com/" target="_blank">Foundation</a> front-end framework (easily add others or even your own!) and integrated with <a href="https://babeljs.io/" target="_blank">Babel</a> allowing developers to use the next generation JavaScript.</p>
+  <p>Frontend Build is a light-weight, no-bloat, front-end build framework. It's purpose is to give developers a jumpstart utilizing <a href="https://gulpjs.com/" target="_blank">Gulp</a> to automate repetitive tasks, a <a href="http://getbem.com/" target="_blank">BEM CSS methodology</a> for a standards-driven approach, pre-loaded with the <a href="http://foundation.zurb.com/" target="_blank">Foundation</a> front-end framework (easily add others or even your own!) and integrated with <a href="https://babeljs.io/" target="_blank">Babel</a> allowing developers to use the next generation JavaScript.</p>
   <blockquote>Say "No!" to spaghetti code and "Yes!" to shorter ramp-up times.</blockquote>
   <p>Jump start your development process in three simple steps:</p>
   <p><pre>$ bundle install
