Added ES module support.

--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,6 @@
     <li><a href="https://github.com/bmarshall511/frontend" target="_blank">Fork</a>
   </ul>
 </div>
-<!-- Needed for Foundation JavaScript -->
-<!--<script src="js/jquery.min.js"></script>
-<script src="js/what-input.min.js"></script>
-<script src="js/foundation.min.js"></script>
-<script src="js/app.js"></script>-->
+<script src="js/app.js"></script>
 </body>
 </html>
