--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
 
 <link rel="stylesheet" href="css/global.css" media="all">
 </head>
-<body style="padding-top: 50px;">
-<div style="max-width: 650px; padding-left: 30px; padding-right: 30px; margin-left: auto; margin-right: auto;">
+<body style="padding-top: 20px;">
+<div style="max-width: 800px; padding-left: 30px; padding-right: 30px; margin-left: auto; margin-right: auto;">
   <h1>Frontend Build</h1>
   <p>Frontend Build is a light-weight, no-bloat, front-end build framework. It's purpose is to give developers a jumpstart utilizing <a href="https://gulpjs.com/" target="_blank">Gulp</a> to automate repetitive tasks, a <a href="http://getbem.com/" target="_blank">BEM CSS methodology</a> for a standards-driven approach, pre-loaded with the <a href="http://foundation.zurb.com/" target="_blank">Foundation</a> front-end framework (<em>easily add others or even your own!</em>) and integrated with <a href="https://babeljs.io/" target="_blank">Babel</a> allowing developers to use the next generation JavaScript.</p>
   <blockquote>Say "No!" to spaghetti code and "Yes!" to shorter ramp-up times.</blockquote>
@@ -31,7 +31,7 @@
   <p>Ready for production?</p>
   <p><code>$ gulp --prod</code></p>
   <ul class="menu simple">
-    <li><a href="/styleguide">Documentation</a>
+    <li><a href="/docs">Documentation</a>
     <li><a href="https://github.com/bmarshall511/frontend/archive/latest.zip" target="_blank">Download</a>
     <li><a href="https://github.com/bmarshall511/frontend" target="_blank">Fork</a>
   </ul>
